# 3D-Frontier-Detector

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: frontiers.rviz  params.yaml
frontier_detector_3d/: __init__.py
frontier_detector_3d/application/: __init__.py  detect_frontiers_use_case.py  ports.py
frontier_detector_3d/domain/: __init__.py  frontier.py  frontier_detector.py  voxel.py  voxel_grid.py
frontier_detector_3d/infrastructure/ros2/: frontier_detector_node.py  pointcloud_voxel_source.py  ros_frontier_publisher.py  synthetic_scene_publisher.py
launch/: demo.launch.py  frontier_detector.launch.py
test/: test_frontier_detector.py  test_voxel_grid.py
