<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontier_detector_3d</name>
  <version>0.1.0</version>
  <description>
    Standalone 3D frontier detector for volumetric maps (OctoMap-compatible).
    Subscribes to occupied + free PointCloud2 topics, detects 3D frontiers,
    clusters them via 26-connectivity, and publishes ranked goal candidates
    as PoseArray + MarkerArray. Built with clean architecture (domain /
    application / infrastructure layers).
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
